# jfswatch

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build-and-test.yml  protect-master.yml  release-on-tag.yml  release.yml
src/: cli.rs  jfswatch.rs  main.rs  test_utils.rs  watched_fs.rs
src/explorers/: exact_explorer.rs  glob_explorer.rs  mod.rs
src/explorers/glob_explorer/: explorer.rs  extend.rs  mod.rs
