[package]
name = "jfswatch"
version = "0.1.0"
edition = "2021"
authors = [
    "Justin Gray (https://github.com/just1ngray)"
]
repository = "https://github.com/just1ngray/jfswatch"
license-file = "LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
glob = "0.3.1"
log = "0.4.20"
flexi_logger = "0.27.4"
chrono = "0.4.34"
regex = "1.10.3"

[dev-dependencies]
rstest = "0.18.2"
tempfile = "3.10.0"
